--- a/MagicKeys/MagicKeys.csproj
+++ b/MagicKeys/MagicKeys.csproj
@@ -76,11 +76,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\.editorconfig" Link=".editorconfig" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="CSCore" Version="1.2.1.2" />
     <PackageReference Include="Gettext.Tools" Version="0.21.0.1" />
     <PackageReference Include="GitInfo" Version="2.1.2">
       <PrivateAssets>all</PrivateAssets>
@@ -89,6 +84,18 @@
     <PackageReference Include="Microsoft.Experimental.Collections" Version="1.0.6-e190117-3" />
     <PackageReference Include="MoonSharp" Version="2.0.0" />
     <PackageReference Include="NGettext" Version="0.6.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="CoreAudio">
+      <HintPath>..\Lib\CoreAudio.dll</HintPath>
+    </Reference>
+    <Reference Include="csogg">
+      <HintPath>..\Lib\csogg.dll</HintPath>
+    </Reference>
+    <Reference Include="csvorbis">
+      <HintPath>..\Lib\csvorbis.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
@@ -105,7 +112,7 @@
   </Target>
 
   <Target Name="ProjectCleanup" BeforeTargets="PreBuildEvent" AfterTargets="Clean">
-    <RemoveDir Directories="$(TargetDir);$(SolutionDir)Dist\$(PlatformName)" />
+    <RemoveDir Directories="$(TargetDir)" />
   </Target>
 
 </Project>
