--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Install .NET Core
+    - name: Install .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.x
