Mega optimize developer tool

--- a/MagicKeys/MagicKeys.csproj
+++ b/MagicKeys/MagicKeys.csproj
@@ -72,6 +72,11 @@
 
   <ItemGroup>
     <None Remove=".gitignore" />
+    <None Remove="Core\Ini\IniRead.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Core\Ini\IniRead.txt" />
   </ItemGroup>
 
   <ItemGroup>
