--- a/DeveloperTool/DeveloperTool.csproj
+++ b/DeveloperTool/DeveloperTool.csproj
@@ -61,7 +61,7 @@
     <Compile Update="Forms\OCRResultForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Update="Forms\OCRResultFormActions.cs">
+    <Compile Update="Forms\OCRResultActions.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Update="Forms\MenuActions.cs">
@@ -71,6 +71,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Update="Forms\MenuKeys.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Forms\VUIManagerActions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Forms\VUIManagerForm.cs">
       <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
