Fixed plugin syntax

--- a/Plugins/Lua/Synapse Audio DUNE/Manifest.ini
+++ b/Plugins/Lua/Synapse Audio DUNE/Manifest.ini
@@ -3,8 +3,12 @@ Name=Synapse Audio DUNE
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Synapse Audio DUNE 2]
+PluginClass=lua
+Loader=None
 VUI=DUNE 2
 Module=DUNE 2
 [Synapse Audio DUNE 3]
+PluginClass=lua
+Loader=None
 VUI=DUNE 3
 Module=DUNE 3
