Fix plugins after commit d10c559af3494200ad7ff273a594c6a732c712d5

--- a/Plugins/Lua/Daichi Laboratory Synth1/Manifest.ini
+++ b/Plugins/Lua/Daichi Laboratory Synth1/Manifest.ini
@@ -3,5 +3,7 @@ Name=Daichi Laboratory Synth1
 Author=A11CF0
 Email=a11cf0.vk@yandex.ru
 [Daichi Laboratory Synth1]
+PluginClass=lua
+Loader=None
 VUI=Synth1
 Module=Synth1
