--- a/Plugins/Lua/ESI MAYA22USBPan/Manifest.ini
+++ b/Plugins/Lua/ESI MAYA22USBPan/Manifest.ini
@@ -3,6 +3,9 @@ Name=ESI MAYA22USBPan
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [ESI MAYA22USBPan]
+[Params]
+PluginClass=lua
+Loader=None
 WTitle=MAYA22 USB
 WClass=MAYA22USB Class
 VUI=MAYA22USBPan
