--- a/Plugins/Lua/Sonic Academy ANA/Manifest.ini
+++ b/Plugins/Lua/Sonic Academy ANA/Manifest.ini
@@ -3,8 +3,12 @@ Name=Sonic Academy ANA
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Sonic Academy ANA]
+PluginClass=lua
+Loader=None
 VUI=ANA
 Module=A.N.A
 [Sonic Academy ANA 2]
+PluginClass=lua
+Loader=None
 VUI=ANA 2
 Module=ANA2
