--- a/Plugins/Lua/Sonic Academy KICK Nicky Romero Edition/Manifest.ini
+++ b/Plugins/Lua/Sonic Academy KICK Nicky Romero Edition/Manifest.ini
@@ -3,5 +3,7 @@ Name=Sonic Academy KICK Nicky Romero Edition
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Sonic Academy KICK Nicky Romero Edition]
+PluginClass=lua
+Loader=None
 VUI=KICK Nicky Romero Edition
 Module=KICK Nicky Romero Edition
