--- a/Plugins/Lua/Sonic Academy Kick 2/Manifest.ini
+++ b/Plugins/Lua/Sonic Academy Kick 2/Manifest.ini
@@ -3,5 +3,7 @@ Name=Sonic Academy Kick 2
 Author=Electrik & Outsider
 Email=electrik-spb@mail.ru
 [Sonic Academy Kick 2]
+PluginClass=lua
+Loader=None
 VUI=Kick 2
 Module=Kick 2
