--- a/Plugins/Lua/Tone2 Electra/Manifest.ini
+++ b/Plugins/Lua/Tone2 Electra/Manifest.ini
@@ -3,5 +3,7 @@ Name=Tone2 Electra
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Tone2 Electra]
+PluginClass=lua
+Loader=None
 VUI=Electra
 Module=ElectraX
