--- a/Plugins/Lua/Tone2 Gladiator/Manifest.ini
+++ b/Plugins/Lua/Tone2 Gladiator/Manifest.ini
@@ -3,5 +3,7 @@ Name=Tone2 Gladiator
 Author=NikitaK
 Email=kolokolchicov.n@gmail.com
 [Tone2 Gladiator]
+PluginClass=lua
+Loader=None
 VUI=Gladiator
 Module=Gladiator
