--- a/Plugins/Lua/Tone2 Icarus/Manifest.ini
+++ b/Plugins/Lua/Tone2 Icarus/Manifest.ini
@@ -3,5 +3,7 @@ Name=Tone2 Icarus
 Author=Electrik & Outsider
 Email=electrik-spb@mail.ru
 [Tone2 Icarus]
+PluginClass=lua
+Loader=None
 VUI=Icarus
 Module=Icarus
