--- a/Plugins/Lua/Tone2 RayBlaster/Manifest.ini
+++ b/Plugins/Lua/Tone2 RayBlaster/Manifest.ini
@@ -3,5 +3,7 @@ Name=Tone2 RayBlaster
 Author=NikitaK
 Email=kolokolchicov.n@gmail.com
 [Tone2 RayBlaster]
+PluginClass=lua
+Loader=None
 VUI=RayBlaster
 Module=RayBlaster
