--- a/Plugins/Lua/Tone2 Saurus/Manifest.ini
+++ b/Plugins/Lua/Tone2 Saurus/Manifest.ini
@@ -3,5 +3,7 @@ Name=Tone2 Saurus
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Tone2 Saurus]
+PluginClass=lua
+Loader=None
 VUI=Saurus
 Module=Saurus
