--- a/Plugins/Lua/Xfer Records LFOTool/Manifest.ini
+++ b/Plugins/Lua/Xfer Records LFOTool/Manifest.ini
@@ -3,5 +3,7 @@ Name=Xfer Records LFOTool
 Author=NikitaK
 Email=kolokolchicov.n@gmail.com
 [Xfer Records LFOTool]
+PluginClass=lua
+Loader=None
 VUI=LFOTool
 Module=LFOTool
