--- a/Plugins/Lua/Zynaptiq UNFILTER/Manifest.ini
+++ b/Plugins/Lua/Zynaptiq UNFILTER/Manifest.ini
@@ -3,5 +3,7 @@ Name=Zynaptiq UNFILTER
 Author=Electrik & Outsider
 Email=electrik-spb@mail.ru
 [Zynaptiq UNFILTER]
+PluginClass=lua
+Loader=None
 VUI=UNFILTER
 Module=UNFILTER
