Fix plugins after commit d10c559af3494200ad7ff273a594c6a732c712d5

--- a/Plugins/Lua/Eventide Blackhole/Manifest.ini
+++ b/Plugins/Lua/Eventide Blackhole/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide Blackhole
 Author=Electrik & Outsider
 Email=electrik-spb@mail.ru
 [Eventide Blackhole]
+PluginClass=lua
 VUI=Blackhole
 Module=Blackhole
