--- a/Plugins/Lua/Eventide Crystals/Manifest.ini
+++ b/Plugins/Lua/Eventide Crystals/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide Crystals
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide Crystals]
+PluginClass=lua
 VUI=Crystals
 Module=Eventide Crystals
