--- a/Plugins/Lua/Eventide EQ45/Manifest.ini
+++ b/Plugins/Lua/Eventide EQ45/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide EQ45
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide EQ45]
+PluginClass=lua
 VUI=EQ45
 Module=Eventide EQ45
