--- a/Plugins/Lua/Eventide H949 Dual Harmonizer/Manifest.ini
+++ b/Plugins/Lua/Eventide H949 Dual Harmonizer/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide H949 Dual Harmonizer
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide H949 Dual Harmonizer]
+PluginClass=lua
 VUI=H949 Dual Harmonizer
 Module=Eventide H949 Dual Harmonizer
