--- a/Plugins/Lua/Eventide MicroPitch/Manifest.ini
+++ b/Plugins/Lua/Eventide MicroPitch/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide MicroPitch
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide MicroPitch]
+PluginClass=lua
 VUI=MicroPitch
 Module=Eventide MicroPitch
