--- a/Plugins/Lua/Eventide Octavox/Manifest.ini
+++ b/Plugins/Lua/Eventide Octavox/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide Octavox
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide Octavox]
+PluginClass=lua
 VUI=Octavox
 Module=Eventide Octavox
