--- a/Plugins/Lua/Eventide Omnipressor/Manifest.ini
+++ b/Plugins/Lua/Eventide Omnipressor/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide Omnipressor
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide Omnipressor]
+PluginClass=lua
 VUI=Omnipressor
 Module=Eventide Omnipressor
