--- a/Plugins/Lua/Eventide Precision Time Delay/Manifest.ini
+++ b/Plugins/Lua/Eventide Precision Time Delay/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide Precision Time Delay
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide Precision Time Delay]
+PluginClass=lua
 VUI=Precision Time Delay
 Module=Eventide Precision Time Delay
