--- a/Plugins/Lua/Eventide Rotary Mod/Manifest.ini
+++ b/Plugins/Lua/Eventide Rotary Mod/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide Rotary Mod
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide Rotary Mod]
+PluginClass=lua
 VUI=Rotary Mod
 Module=Eventide Rotary Mod
