--- a/Plugins/Lua/Eventide SP2016 Reverb/Manifest.ini
+++ b/Plugins/Lua/Eventide SP2016 Reverb/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide SP2016 Reverb
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide SP2016 Reverb]
+PluginClass=lua
 VUI=SP2016 Reverb
 Module=Eventide SP2016 Reverb
