--- a/Plugins/Lua/Eventide UltraReverb/Manifest.ini
+++ b/Plugins/Lua/Eventide UltraReverb/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide UltraReverb
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide UltraReverb]
+PluginClass=lua
 VUI=UltraReverb
 Module=Eventide UltraReverb
