--- a/Plugins/Lua/LinPlug Albino3/Manifest.ini
+++ b/Plugins/Lua/LinPlug Albino3/Manifest.ini
@@ -3,5 +3,6 @@ Name=LinPlug Albino3
 Author=Electrik & Outsider
 Email=electrik-spb@mail.ru
 [LinPlug Albino3]
+PluginClass=lua
 VUI=Albino3
 Module=Albino3
