--- a/Plugins/Lua/Eventide 2016 Stereo Room/Manifest.ini
+++ b/Plugins/Lua/Eventide 2016 Stereo Room/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide 2016 Stereo Room
 Author=Electrik & Outsider
 Email=electrik-spb@mail.ru
 [Eventide 2016 Stereo Room]
+PluginClass=lua
 VUI=2016 Stereo Room
 Module=2016 Stereo Room
