--- a/Plugins/Lua/Eventide CrushStation/Manifest.ini
+++ b/Plugins/Lua/Eventide CrushStation/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide CrushStation
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide CrushStation]
+PluginClass=lua
 VUI=CrushStation
 Module=Eventide CrushStation
