--- a/Plugins/Lua/Eventide EChannel/Manifest.ini
+++ b/Plugins/Lua/Eventide EChannel/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide EChannel
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide EChannel]
+PluginClass=lua
 VUI=EChannel
 Module=Eventide EChannel
