--- a/Plugins/Lua/Eventide EQ65/Manifest.ini
+++ b/Plugins/Lua/Eventide EQ65/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide EQ65
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide EQ65]
+PluginClass=lua
 VUI=EQ65
 Module=Eventide EQ65
