--- a/Plugins/Lua/Eventide H3000 Band Delays/Manifest.ini
+++ b/Plugins/Lua/Eventide H3000 Band Delays/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide H3000 Band Delays
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide H3000 Band Delays]
+PluginClass=lua
 VUI=H3000 Band Delays
 Module=Eventide H3000 Band Delays
