--- a/Plugins/Lua/Eventide H3000 Factory/Manifest.ini
+++ b/Plugins/Lua/Eventide H3000 Factory/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide H3000 Factory
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide H3000 Factory]
+PluginClass=lua
 VUI=H3000 Factory
 Module=Eventide H3000 Factory
