--- a/Plugins/Lua/Eventide H910 Dual Harmonizer/Manifest.ini
+++ b/Plugins/Lua/Eventide H910 Dual Harmonizer/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide H910 Dual Harmonizer
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide H910 Dual Harmonizer]
+PluginClass=lua
 VUI=H910 Dual Harmonizer
 Module=Eventide H910 Dual Harmonizer
