--- a/Plugins/Lua/Eventide H910 Harmonizer/Manifest.ini
+++ b/Plugins/Lua/Eventide H910 Harmonizer/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide H910 Harmonizer
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide H910 Harmonizer]
+PluginClass=lua
 VUI=H910 Harmonizer
 Module=Eventide H910 Harmonizer
