--- a/Plugins/Lua/Eventide Instant Flanger Mk II/Manifest.ini
+++ b/Plugins/Lua/Eventide Instant Flanger Mk II/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide Instant Flanger Mk II
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide Instant Flanger Mk II]
+PluginClass=lua
 VUI=Instant Flanger Mk II
 Module=Eventide Instant Flanger Mk II
