--- a/Plugins/Lua/Eventide Instant Phaser Mk II/Manifest.ini
+++ b/Plugins/Lua/Eventide Instant Phaser Mk II/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide Instant Phaser Mk II
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide Instant Phaser Mk II]
+PluginClass=lua
 VUI=Instant Phaser Mk II
 Module=Eventide Instant Phaser Mk II
