--- a/Plugins/Lua/Eventide Physion/Manifest.ini
+++ b/Plugins/Lua/Eventide Physion/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide Physion
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide Physion]
+PluginClass=lua
 VUI=Physion
 Module=Eventide Physion
