--- a/Plugins/Lua/Eventide Precision Time Align/Manifest.ini
+++ b/Plugins/Lua/Eventide Precision Time Align/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide Precision Time Align
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide Precision Time Align]
+PluginClass=lua
 VUI=Precision Time Align
 Module=Eventide Precision Time Align
