--- a/Plugins/Lua/Eventide Quadravox/Manifest.ini
+++ b/Plugins/Lua/Eventide Quadravox/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide Quadravox
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide Quadravox]
+PluginClass=lua
 VUI=Quadravox
 Module=Eventide Quadravox
