--- a/Plugins/Lua/Eventide ShimmerVerb/Manifest.ini
+++ b/Plugins/Lua/Eventide ShimmerVerb/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide ShimmerVerb
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide ShimmerVerb]
+PluginClass=lua
 VUI=ShimmerVerb
 Module=Eventide ShimmerVerb
