--- a/Plugins/Lua/Eventide Spring/Manifest.ini
+++ b/Plugins/Lua/Eventide Spring/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide Spring
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide Spring]
+PluginClass=lua
 VUI=Spring
 Module=Eventide Spring
