--- a/Plugins/Lua/Eventide TriceraChorus/Manifest.ini
+++ b/Plugins/Lua/Eventide TriceraChorus/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide TriceraChorus
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide TriceraChorus]
+PluginClass=lua
 VUI=TriceraChorus
 Module=Eventide TriceraChorus
