--- a/Plugins/Lua/Eventide Tverb/Manifest.ini
+++ b/Plugins/Lua/Eventide Tverb/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide Tverb
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide Tverb]
+PluginClass=lua
 VUI=Tverb
 Module=Eventide Tverb
