--- a/Plugins/Lua/Eventide UltraChannel/Manifest.ini
+++ b/Plugins/Lua/Eventide UltraChannel/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide UltraChannel
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide UltraChannel]
+PluginClass=lua
 VUI=UltraChannel
 Module=Eventide UltraChannel
