--- a/Plugins/Lua/Eventide UltraTap/Manifest.ini
+++ b/Plugins/Lua/Eventide UltraTap/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide UltraTap
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide UltraTap]
+PluginClass=lua
 VUI=UltraTap
 Module=Eventide UltraTap
