--- a/Plugins/Lua/Eventide Undulator/Manifest.ini
+++ b/Plugins/Lua/Eventide Undulator/Manifest.ini
@@ -3,5 +3,6 @@ Name=Eventide Undulator
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Eventide Undulator]
+PluginClass=lua
 VUI=Undulator
 Module=Eventide Undulator
