Fix plugins after commit d10c559af3494200ad7ff273a594c6a732c712d5

--- a/Plugins/Lua/Toontrack EZKeys/Manifest.ini
+++ b/Plugins/Lua/Toontrack EZKeys/Manifest.ini
@@ -3,5 +3,6 @@ Name=Toontrack EZKeys
 Author=NikitaK
 Email=kolokolchicov.n@gmail.com
 [Toontrack EZKeys]
+PluginClass=lua
 VUI=EZKeys
 Module=EZKeys
