Fix plugins after commit d10c559af3494200ad7ff273a594c6a732c712d5

--- a/Plugins/Lua/KVR Audio PlugSound/Manifest.ini
+++ b/Plugins/Lua/KVR Audio PlugSound/Manifest.ini
@@ -3,8 +3,10 @@ Name=KVR Audio PlugSound
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [KVR Audio PlugSound]
+PluginClass=lua
 VUI=PlugSound
 Module=PS0
 [KVR Audio PlugSound Free]
+PluginClass=lua
 VUI=PlugSoundFree
 Module=Plugsound
