--- a/Plugins/Lua/Rob Papen Predator/Manifest.ini
+++ b/Plugins/Lua/Rob Papen Predator/Manifest.ini
@@ -3,5 +3,6 @@ Name=Rob Papen Predator
 Author=Viruzober
 Email=den-viruzober@yandex.ru
 [Rob Papen Predator]
+PluginClass=lua
 VUI=Predator
 Module=Predator
