--- a/Plugins/Lua/Roland JUNO-106/Manifest.ini
+++ b/Plugins/Lua/Roland JUNO-106/Manifest.ini
@@ -3,5 +3,6 @@ Name=Roland JUNO-106
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Roland JUNO-106]
+PluginClass=lua
 VUI=JUNO-106
 Module=JUNO-106
