--- a/Plugins/Lua/Roland SRX DANCE TRAX/Manifest.ini
+++ b/Plugins/Lua/Roland SRX DANCE TRAX/Manifest.ini
@@ -3,5 +3,6 @@ Name=Roland SRX DANCE TRAX
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Roland SRX DANCE TRAX]
+PluginClass=lua
 VUI=SRX DANCE TRAX
 Module=SRX DANCE TRAX
