--- a/Plugins/Lua/Roland SRX ELECTRIC PIANO/Manifest.ini
+++ b/Plugins/Lua/Roland SRX ELECTRIC PIANO/Manifest.ini
@@ -3,5 +3,6 @@ Name=Roland SRX ELECTRIC PIANO
 Author=Evgeniy Timaev
 Email=djjony2006@mail.ru
 [Roland SRX ELECTRIC PIANO]
+PluginClass=lua
 VUI=srx piano
 Module=SRX ELECTRIC PIANO
