--- a/Plugins/Lua/Roland SRX KEYBOARDS/Manifest.ini
+++ b/Plugins/Lua/Roland SRX KEYBOARDS/Manifest.ini
@@ -3,5 +3,6 @@ Name=Roland SRX KEYBOARDS
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Roland SRX KEYBOARDS]
+PluginClass=lua
 VUI=SRX KEYBOARDS
 Module=SRX KEYBOARDS
