--- a/Plugins/Lua/Roland SRX WORLD/Manifest.ini
+++ b/Plugins/Lua/Roland SRX WORLD/Manifest.ini
@@ -3,5 +3,6 @@ Name=Roland SRX WORLD
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Roland SRX WORLD]
+PluginClass=lua
 VUI=SRX WORLD
 Module=SRX WORLD
