--- a/Plugins/Lua/Roland SYSTEM-1/Manifest.ini
+++ b/Plugins/Lua/Roland SYSTEM-1/Manifest.ini
@@ -3,5 +3,6 @@ Name=Roland SYSTEM-1
 Author=Electrik & Outsider
 Email=electrik-spb@mail.ru
 [Roland SYSTEM-1]
+PluginClass=lua
 VUI=SYSTEM-1
 Module=SYSTEM-1.
