--- a/Plugins/Lua/Roland SYSTEM-8/Manifest.ini
+++ b/Plugins/Lua/Roland SYSTEM-8/Manifest.ini
@@ -3,5 +3,6 @@ Name=Roland SYSTEM-8
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Roland SYSTEM-8]
+PluginClass=lua
 VUI=SYSTEM-8
 Module=SYSTEM-8
