--- a/Plugins/Lua/Roland SYSTEM-100/Manifest.ini
+++ b/Plugins/Lua/Roland SYSTEM-100/Manifest.ini
@@ -3,5 +3,6 @@ Name=Roland SYSTEM-100
 Author=Viruzober
 Email=Den-viruzober@yandex.ru
 [Roland SYSTEM-100]
+PluginClass=lua
 VUI=SYSTEM-100
 Module=SYSTEM-100(VST
